--- a/WeatherPy/VacationPy2_hw_SKG.ipynb
+++ b/WeatherPy/VacationPy2_hw_SKG.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "dd60dd11",
    "metadata": {},
    "source": [
     "# VacationPy\n",
@@ -16,6 +17,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "5dffe59c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,6 +35,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f030271e",
    "metadata": {},
    "source": [
     "### Store Part I results into DataFrame\n",
@@ -40,16 +43,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n"
-   ]
-  },
-  {
    "cell_type": "markdown",
+   "id": "bb68705e",
    "metadata": {},
    "source": [
     "### Humidity Heatmap\n",
@@ -61,6 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "6def9fc8",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -68,12 +64,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "10f1c404",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
+   "id": "25e476ab",
    "metadata": {},
    "source": [
     "### Create new DataFrame fitting weather criteria\n",
@@ -84,12 +82,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "3dd9b8fa",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
+   "id": "50602464",
    "metadata": {},
    "source": [
     "### Hotel Map\n",
@@ -104,6 +104,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "01710f2e",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -111,6 +112,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "837c5db6",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -118,6 +120,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "6166e681",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,18 +143,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "3171da1a",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Add marker layer ontop of heat map\n",
     "\n",
     "\n",
-    "# Display figure\n"
+    "# Display figure"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "52faf9f3",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -174,26 +179,8 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.6.10"
-  },
-  "latex_envs": {
-   "LaTeX_envs_menu_present": true,
-   "autoclose": false,
-   "autocomplete": true,
-   "bibliofile": "biblio.bib",
-   "cite_by": "apalike",
-   "current_citInitial": 1,
-   "eqLabelWithNumbers": true,
-   "eqNumInitial": 1,
-   "hotkeys": {
-    "equation": "Ctrl-E",
-    "itemize": "Ctrl-I"
-   },
-   "labels_anchors": false,
-   "latex_user_defs": false,
-   "report_style_numbering": false,
-   "user_envs_cfg": false
   }
  },
  "nbformat": 4,
- "nbformat_minor": 4
+ "nbformat_minor": 5
 }
